syntax = "proto3";

package app.morphe.extension.youtube.innertube;

option optimize_for = LITE_RUNTIME;
option java_package = "app.morphe.extension.youtube.innertube";

message SearchResponse {
  SearchMobileHeaderRenderer search_mobile_header_renderer = 188186167;
}

message SearchMobileHeaderRenderer {
  FilterContainer filters = 1;
}

message FilterContainer {
  SimpleSearchFilterGroupRenderer simple_search_filter_group_renderer = 187333422;
}

message SimpleSearchFilterGroupRenderer {
  repeated SearchFilterGroup search_filter_groups = 1;
}

message SearchFilterGroup {
  repeated SearchFilterOption search_filter_options = 1;
  bool allow_multiple_selections = 2;
  Title title = 3;
}

message SearchFilterOption {
  Label label = 1;
  FilterStatus status = 2;
  string form_value = 3;
}

message Label {
  string simple_text = 4;
}

message Title {
  string simple_text = 4;
}

enum FilterStatus {
  SEARCH_FILTER_STATUS_UNKNOWN = 0;
  SEARCH_FILTER_STATUS_DESELECTED = 1;
  SEARCH_FILTER_STATUS_SELECTED = 2;
}

message SearchFormData {
  repeated string form_value = 1;
}
